--- a/aboutme.html
+++ b/aboutme.html
@@ -37,7 +37,7 @@
 	<img src="fiat.jpg" title="Alma Mater" height="450px" width="700px">
 	<br/>
 	<br/>
-	<img src="medal.jpg" height="450px" width="700px">
+	<img src="medal.JPG" height="450px" width="700px">
 	
 	<br/>
 	<br/>
