--- a/tour.html
+++ b/tour.html
@@ -220,7 +220,7 @@
 	<a href="#fam">
 	
 	<a name="fam">
-	<img src="fam1.jpg" usemap="#fam">
+	<img src="fam1.JPG" usemap="#fam">
 	
 	<map name="fam">
 	<area shape="poly" coords="142,87,125,166,80,187,95,439,195,443,194,180" href="tatay.html"/>
@@ -235,10 +235,10 @@
 	
 	<br/>
 	<center>
-	<img src="fam2.jpg" height="450px">
+	<img src="fam2.JPG" height="450px">
 	<p><em> 161113 We attended the wedding of our cousin </em></p>
 	<br/>
-	<img src="fam4.jpg" height="450px">
+	<img src="fam4.JPG" height="450px">
 	<p><em> 160423 Kuya&#39;s Graduation </em></p>
 	<br/>
 	
