--- a/tour.html
+++ b/tour.html
@@ -33,7 +33,7 @@
 	<h2> WELCOME TO MY HOME! </h2>
 	<br/>
 	
-	<img src="h1.jpg" usemap="#gate">
+	<img src="h1.JPG" usemap="#gate">
 	
 	<map name="gate">
 	<area shape="poly" coords="146,346,271,346,370,352,372,447,276,446" href="#ginger"></area>
@@ -52,7 +52,7 @@
 	<br/>
 	
 	<a name="ginger">
-	<img src="h2.jpg" usemap="#luya">
+	<img src="h2.JPG" usemap="#luya">
 	
 	<map name="luya">
 	<area shape="poly" coords="200,346,224,347,250,383,227,424,190,421,187,383" href="#ginger2"></area>
@@ -71,7 +71,7 @@
 	<br/>
 	
 	<a name="ginger2">
-	<img src="h3.jpg" usemap="#luya2">
+	<img src="h3.JPG" usemap="#luya2">
 	
 	<map name="luya2">
 	<area shape="poly" coords="218,87,283,129,334,85,399,233,513,422,217,441,190,276" href="#sala"></area>
@@ -109,7 +109,7 @@
 	<br/>
 	
 	<a name="kitchen">
-	<img src="h5.jpg" usemap="#kusina">
+	<img src="h5.JPG" usemap="#kusina">
 	
 	<map name="kusina">
 	<area shape="rect" coords="5,44,70,121" href="#stairs"></area>
@@ -128,7 +128,7 @@
 	<br/>
 	
 	<a name="stairs">
-	<img src="h6.jpg" usemap="#hagdan">
+	<img src="h6.JPG" usemap="#hagdan">
 	
 	<map name="hagdan">
 	<area shape="poly" coords="350,325,385,325,389,442,358,445" href="#stairs2"></area>
@@ -148,7 +148,7 @@
 	<br/>
 	
 	<a name="stairs2">
-	<img src="h7.jpg" usemap="#hagdan2">
+	<img src="h7.JPG" usemap="#hagdan2">
 	
 	<map name="hagdan2">
 	<area shape="poly" coords="287,185,414,184,632,404,70,414" href="#room"></area>
