--- a/tatay.html
+++ b/tatay.html
@@ -31,7 +31,7 @@
 	<br/>
 	<h1 align="center"> RODEL </h1>
 	
-	<img src="tatay.jpg" height="450px" align="right"/>
+	<img src="tatay.JPG" height="450px" align="right"/>
 	
 	<p align="left">
 	Name: Rodolfo Alindog Encabo <br/><br/>
