--- a/concert.html
+++ b/concert.html
@@ -47,9 +47,9 @@
 	<br/>
 	<p> 170225-170226 </p>
 	<p> February 25-26 this year they came back to the Philippines as one of the stops in the third leg of their world tour, the EXOr&#39;dium. Unlike the first time, I know very well how concerts work before, during, and after. I also had someone to go with for both days, yes, this time, I attended both days. </p>
-	<img src="ted6.jpg" height="450px">
+	<img src="ted6.JPG" height="450px">
 	<br/>
-	<img src="ted4.jpg" height="450px">
+	<img src="ted4.JPG" height="450px">
 	<br/>
 	<p> Hanna and I went to Araneta Coliseum on the first day as early as 10am to claim our bundles, orders as well as take part in various giveaways from different local fanbases. I never knew it will be that fun even if we were walking and running from place to place under the heat of the sun. </p>
 	<br/>
